# FastAPI-Scikitlearn-Inference

./: LICENSE  README.md  main.py  model.py  pyproject.toml
