[project]
name = "fastapi-inference-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.14",
]
